Update README.md installation guide